Class Projects/C- Compiler - CS 445 (Compiler Design)/HW6/c-.output
Terminals unused in grammar

   UNDEFINED


Rules useless in parser due to conflicts

   12 scopedVarDeclaration: error varDeclList ';'


State 1 conflicts: 2 shift/reduce
State 77 conflicts: 1 reduce/reduce
State 103 conflicts: 6 reduce/reduce
State 159 conflicts: 1 shift/reduce
State 166 conflicts: 1 shift/reduce
State 168 conflicts: 6 reduce/reduce
State 185 conflicts: 1 reduce/reduce
State 199 conflicts: 1 shift/reduce
State 227 conflicts: 23 reduce/reduce
State 252 conflicts: 1 shift/reduce
State 258 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: varDeclaration
    5            | funDeclaration
    6            | error

    7 varDeclaration: typeSpecifier varDeclList ';'
    8               | error varDeclList ';'
    9               | typeSpecifier error ';'

   10 scopedVarDeclaration: scopedTypeSpecifier varDeclList ';'
   11                     | scopedTypeSpecifier error ';'
   12                     | error varDeclList ';'

   13 varDeclList: varDeclList ',' varDeclInitialize
   14            | varDeclList ',' error
   15            | varDeclInitialize

   16 varDeclInitialize: varDeclId
   17                  | varDeclId ':' simpleExpression
   18                  | error ':' simpleExpression
   19                  | varDeclId ':' error

   20 varDeclId: ID
   21          | ID '[' NUMCONST ']'
   22          | ID '[' error
   23          | error ']'

   24 scopedTypeSpecifier: STATIC typeSpecifier

   25 typeSpecifier: INT
   26              | BOOL
   27              | CHAR

   28 funDeclaration: typeSpecifier ID '(' params ')' statement
   29               | ID '(' params ')' statement
   30               | typeSpecifier error
   31               | typeSpecifier ID '(' error
   32               | typeSpecifier ID '(' params ')' error
   33               | ID '(' error
   34               | ID '(' params ')' error

   35 params: paramList
   36       | %empty

   37 paramList: paramList ';' paramTypeList
   38          | paramList ';' error
   39          | paramTypeList
   40          | error

   41 paramTypeList: typeSpecifier paramIdList

   42 paramIdList: paramIdList ',' paramId
   43            | paramIdList ',' error
   44            | paramId
   45            | error

   46 paramId: ID
   47        | ID '[' ']'

   48 statement: matched
   49          | unmatched

   50 matched: expressionStmt
   51        | compoundStmt
   52        | matchedSelStmt
   53        | matchedWhileStmt
   54        | matchedLoopStmt
   55        | returnStmt
   56        | breakStmt

   57 unmatched: unmatchedSelStmt
   58          | unmatchedWhileStmt
   59          | unmatchedLoopStmt

   60 compoundStmt: '{' localDeclarations statementList '}'
   61             | '{' localDeclarations error '}'
   62             | error

   63 matchedSelStmt: IF simpleExpression THEN matched matchedElsif
   64               | IF error
   65               | IF error THEN matched matchedElsif

   66 matchedElsif: ELSIF simpleExpression THEN matched matchedElsif
   67             | ELSIF error
   68             | ELSIF error THEN matched matchedElsif
   69             | ELSE matched
   70             | error ELSE

   71 unmatchedSelStmt: IF simpleExpression THEN unmatched
   72                 | IF simpleExpression THEN matched
   73                 | IF simpleExpression THEN matched unmatchedElsif
   74                 | IF error THEN unmatched
   75                 | IF error THEN matched ELSE unmatched

   76 unmatchedElsif: ELSIF simpleExpression THEN matched unmatchedElsif
   77               | ELSIF simpleExpression THEN matched
   78               | ELSIF simpleExpression THEN unmatched
   79               | ELSE unmatched

   80 matchedWhileStmt: WHILE expression DO matched
   81                 | WHILE error DO matched

   82 unmatchedWhileStmt: WHILE expression DO unmatched
   83                   | WHILE error DO unmatched
   84                   | WHILE error

   85 matchedLoopStmt: LOOP ID '=' iterationRange DO matched
   86                | LOOP FOREVER matched
   87                | LOOP ID '=' error DO matched
   88                | LOOP ID '=' error
   89                | LOOP ID error

   90 unmatchedLoopStmt: LOOP ID '=' iterationRange DO unmatched
   91                  | LOOP FOREVER unmatched
   92                  | LOOP ID '=' error DO unmatched

   93 returnStmt: RETURN ';'
   94           | RETURN expression ';'

   95 breakStmt: BREAK ';'

   96 localDeclarations: localDeclarations scopedVarDeclaration
   97                  | localDeclarations varDeclaration
   98                  | %empty

   99 iterationRange: simpleExpression RANGE simpleExpression
  100               | simpleExpression RANGE simpleExpression ':' simpleExpression
  101               | simpleExpression RANGE simpleExpression ':' error
  102               | simpleExpression RANGE error

  103 statementList: statementList statement
  104              | %empty

  105 expressionStmt: expression ';'
  106               | ';'

  107 expression: mutable '=' expression
  108           | error '=' error
  109           | mutable INC
  110           | error INC
  111           | mutable DEC
  112           | error DEC
  113           | mutable ADDASS expression
  114           | mutable SUBASS expression
  115           | mutable MULASS expression
  116           | mutable DIVASS expression
  117           | simpleExpression
  118           | error

  119 simpleExpression: simpleExpression OR andExpression
  120                 | andExpression
  121                 | simpleExpression OR error

  122 andExpression: andExpression AND unaryRelExpression
  123              | unaryRelExpression
  124              | andExpression AND error

  125 unaryRelExpression: NOT unaryRelExpression
  126                   | relExpression
  127                   | NOT error

  128 relExpression: sumExpression relop sumExpression
  129              | sumExpression
  130              | sumExpression relop error

  131 relop: LESSEQ
  132      | '<'
  133      | '>'
  134      | GRTEQ
  135      | EQ
  136      | NOTEQ

  137 sumExpression: sumExpression sumop mulExpression
  138              | mulExpression
  139              | sumExpression sumop error

  140 sumop: '+'
  141      | '-'

  142 mulExpression: mulExpression mulop unaryExpression
  143              | unaryExpression
  144              | mulExpression mulop error

  145 mulop: '/'
  146      | '*'
  147      | '%'

  148 unaryExpression: unaryop unaryExpression
  149                | factor
  150                | unaryop error

  151 unaryop: '-'
  152        | '*'
  153        | '?'

  154 factor: mutable
  155       | immutable

  156 mutable: ID
  157        | mutable '[' expression ']'

  158 immutable: '(' expression ')'
  159          | call
  160          | constant
  161          | '(' error

  162 call: ID '(' args ')'

  163 args: argList
  164     | %empty

  165 argList: argList ',' expression
  166        | expression

  167 constant: NUMCONST
  168         | BOOLCONST
  169         | CHARCONST
  170         | STRINGCONST


Terminals, with rules where they appear

$end (0) 0
'%' (37) 147
'(' (40) 28 29 31 32 33 34 158 161 162
')' (41) 28 29 32 34 158 162
'*' (42) 146 152
'+' (43) 140
',' (44) 13 14 42 43 165
'-' (45) 141 151
'/' (47) 145
':' (58) 17 18 19 100 101
';' (59) 7 8 9 10 11 12 37 38 93 94 95 105 106
'<' (60) 132
'=' (61) 85 87 88 90 92 107 108
'>' (62) 133
'?' (63) 153
'[' (91) 21 22 47 157
']' (93) 21 23 47 157
'{' (123) 60 61
'}' (125) 60 61
error (256) 6 8 9 11 12 14 18 19 22 23 30 31 32 33 34 38 40 43 45 61
    62 64 65 67 68 70 74 75 81 83 84 87 88 89 92 101 102 108 110 112
    118 121 124 127 130 139 144 150 161
INT (258) 25
ID (259) 20 21 22 28 29 31 32 33 34 46 47 85 87 88 89 90 92 156 162
BOOL (260) 26
BOOLCONST (261) 168
NUMCONST (262) 21 167
ADDASS (263) 113
SUBASS (264) 114
DIVASS (265) 116
MULASS (266) 115
EQ (267) 135
LESSEQ (268) 131
GRTEQ (269) 134
NOTEQ (270) 136
AND (271) 122 124
OR (272) 119 121
NOT (273) 125 127
IF (274) 63 64 65 71 72 73 74 75
THEN (275) 63 65 66 68 71 72 73 74 75 76 77 78
ELSIF (276) 66 67 68 76 77 78
ELSE (277) 69 70 75 79
WHILE (278) 80 81 82 83 84
DO (279) 80 81 82 83 85 87 90 92
BREAK (280) 95
LOOP (281) 85 86 87 88 89 90 91 92
RANGE (282) 99 100 101 102
FOREVER (283) 86 91
STATIC (284) 24
RETURN (285) 93 94
CHAR (286) 27
DEC (287) 111 112
INC (288) 109 110
CHARCONST (289) 169
STRINGCONST (290) 170
UNDEFINED (291)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1, on right: 0
declarationList (57)
    on left: 2 3, on right: 1 2
declaration (58)
    on left: 4 5 6, on right: 2 3
varDeclaration (59)
    on left: 7 8 9, on right: 4 97
scopedVarDeclaration (60)
    on left: 10 11 12, on right: 96
varDeclList (61)
    on left: 13 14 15, on right: 7 8 10 12 13 14
varDeclInitialize (62)
    on left: 16 17 18 19, on right: 13 15
varDeclId (63)
    on left: 20 21 22 23, on right: 16 17 19
scopedTypeSpecifier (64)
    on left: 24, on right: 10 11
typeSpecifier (65)
    on left: 25 26 27, on right: 7 9 24 28 30 31 32 41
funDeclaration (66)
    on left: 28 29 30 31 32 33 34, on right: 5
params (67)
    on left: 35 36, on right: 28 29 32 34
paramList (68)
    on left: 37 38 39 40, on right: 35 37 38
paramTypeList (69)
    on left: 41, on right: 37 39
paramIdList (70)
    on left: 42 43 44 45, on right: 41 42 43
paramId (71)
    on left: 46 47, on right: 42 44
statement (72)
    on left: 48 49, on right: 28 29 103
matched (73)
    on left: 50 51 52 53 54 55 56, on right: 48 63 65 66 68 69 72 73
    75 76 77 80 81 85 86 87
unmatched (74)
    on left: 57 58 59, on right: 49 71 74 75 78 79 82 83 90 91 92
compoundStmt (75)
    on left: 60 61 62, on right: 51
matchedSelStmt (76)
    on left: 63 64 65, on right: 52
matchedElsif (77)
    on left: 66 67 68 69 70, on right: 63 65 66 68
unmatchedSelStmt (78)
    on left: 71 72 73 74 75, on right: 57
unmatchedElsif (79)
    on left: 76 77 78 79, on right: 73 76
matchedWhileStmt (80)
    on left: 80 81, on right: 53
unmatchedWhileStmt (81)
    on left: 82 83 84, on right: 58
matchedLoopStmt (82)
    on left: 85 86 87 88 89, on right: 54
unmatchedLoopStmt (83)
    on left: 90 91 92, on right: 59
returnStmt (84)
    on left: 93 94, on right: 55
breakStmt (85)
    on left: 95, on right: 56
localDeclarations (86)
    on left: 96 97 98, on right: 60 61 96 97
iterationRange (87)
    on left: 99 100 101 102, on right: 85 90
statementList (88)
    on left: 103 104, on right: 60 103
expressionStmt (89)
    on left: 105 106, on right: 50
expression (90)
    on left: 107 108 109 110 111 112 113 114 115 116 117 118, on right:
    80 82 94 105 107 113 114 115 116 157 158 165 166
simpleExpression (91)
    on left: 119 120 121, on right: 17 18 63 66 71 72 73 76 77 78 99
    100 101 102 117 119 121
andExpression (92)
    on left: 122 123 124, on right: 119 120 122 124
unaryRelExpression (93)
    on left: 125 126 127, on right: 122 123 125
relExpression (94)
    on left: 128 129 130, on right: 126
relop (95)
    on left: 131 132 133 134 135 136, on right: 128 130
sumExpression (96)
    on left: 137 138 139, on right: 128 129 130 137 139
sumop (97)
    on left: 140 141, on right: 137 139
mulExpression (98)
    on left: 142 143 144, on right: 137 138 142 144
mulop (99)
    on left: 145 146 147, on right: 142 144
unaryExpression (100)
    on left: 148 149 150, on right: 142 143 148
unaryop (101)
    on left: 151 152 153, on right: 148 150
factor (102)
    on left: 154 155, on right: 149
mutable (103)
    on left: 156 157, on right: 107 109 111 113 114 115 116 154 157
immutable (104)
    on left: 158 159 160 161, on right: 155
call (105)
    on left: 162, on right: 159
args (106)
    on left: 163 164, on right: 162
argList (107)
    on left: 165 166, on right: 163 165
constant (108)
    on left: 167 168 169 170, on right: 160


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    INT    shift, and go to state 2
    ID     shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    program          go to state 6
    declarationList  go to state 7
    declaration      go to state 8
    varDeclaration   go to state 9
    typeSpecifier    go to state 10
    funDeclaration   go to state 11


State 1

    6 declaration: error .
    8 varDeclaration: error . varDeclList ';'

    error  shift, and go to state 12
    ID     shift, and go to state 13

    $end   reduce using rule 6 (declaration)
    error  [reduce using rule 6 (declaration)]
    INT    reduce using rule 6 (declaration)
    ID     [reduce using rule 6 (declaration)]
    BOOL   reduce using rule 6 (declaration)
    CHAR   reduce using rule 6 (declaration)

    varDeclList        go to state 14
    varDeclInitialize  go to state 15
    varDeclId          go to state 16


State 2

   25 typeSpecifier: INT .

    $default  reduce using rule 25 (typeSpecifier)


State 3

   29 funDeclaration: ID . '(' params ')' statement
   33               | ID . '(' error
   34               | ID . '(' params ')' error

    '('  shift, and go to state 17


State 4

   26 typeSpecifier: BOOL .

    $default  reduce using rule 26 (typeSpecifier)


State 5

   27 typeSpecifier: CHAR .

    $default  reduce using rule 27 (typeSpecifier)


State 6

    0 $accept: program . $end

    $end  shift, and go to state 18


State 7

    1 program: declarationList .
    2 declarationList: declarationList . declaration

    error  shift, and go to state 1
    INT    shift, and go to state 2
    ID     shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    $end  reduce using rule 1 (program)

    declaration     go to state 19
    varDeclaration  go to state 9
    typeSpecifier   go to state 10
    funDeclaration  go to state 11


State 8

    3 declarationList: declaration .

    $default  reduce using rule 3 (declarationList)


State 9

    4 declaration: varDeclaration .

    $default  reduce using rule 4 (declaration)


State 10

    7 varDeclaration: typeSpecifier . varDeclList ';'
    9               | typeSpecifier . error ';'
   28 funDeclaration: typeSpecifier . ID '(' params ')' statement
   30               | typeSpecifier . error
   31               | typeSpecifier . ID '(' error
   32               | typeSpecifier . ID '(' params ')' error

    error  shift, and go to state 20
    ID     shift, and go to state 21

    varDeclList        go to state 22
    varDeclInitialize  go to state 15
    varDeclId          go to state 16


State 11

    5 declaration: funDeclaration .

    $default  reduce using rule 5 (declaration)


State 12

   18 varDeclInitialize: error . ':' simpleExpression
   23 varDeclId: error . ']'

    ']'  shift, and go to state 23
    ':'  shift, and go to state 24


State 13

   20 varDeclId: ID .
   21          | ID . '[' NUMCONST ']'
   22          | ID . '[' error

    '['  shift, and go to state 25

    $default  reduce using rule 20 (varDeclId)


State 14

    8 varDeclaration: error varDeclList . ';'
   13 varDeclList: varDeclList . ',' varDeclInitialize
   14            | varDeclList . ',' error

    ';'  shift, and go to state 26
    ','  shift, and go to state 27


State 15

   15 varDeclList: varDeclInitialize .

    $default  reduce using rule 15 (varDeclList)


State 16

   16 varDeclInitialize: varDeclId .
   17                  | varDeclId . ':' simpleExpression
   19                  | varDeclId . ':' error

    ':'  shift, and go to state 28

    $default  reduce using rule 16 (varDeclInitialize)


State 17

   29 funDeclaration: ID '(' . params ')' statement
   33               | ID '(' . error
   34               | ID '(' . params ')' error

    error  shift, and go to state 29
    INT    shift, and go to state 2
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    ')'  reduce using rule 36 (params)

    typeSpecifier  go to state 30
    params         go to state 31
    paramList      go to state 32
    paramTypeList  go to state 33


State 18

    0 $accept: program $end .

    $default  accept


State 19

    2 declarationList: declarationList declaration .

    $default  reduce using rule 2 (declarationList)


State 20

    9 varDeclaration: typeSpecifier error . ';'
   18 varDeclInitialize: error . ':' simpleExpression
   23 varDeclId: error . ']'
   30 funDeclaration: typeSpecifier error .

    ';'  shift, and go to state 34
    ']'  shift, and go to state 23
    ':'  shift, and go to state 24

    $default  reduce using rule 30 (funDeclaration)


State 21

   20 varDeclId: ID .
   21          | ID . '[' NUMCONST ']'
   22          | ID . '[' error
   28 funDeclaration: typeSpecifier ID . '(' params ')' statement
   31               | typeSpecifier ID . '(' error
   32               | typeSpecifier ID . '(' params ')' error

    '['  shift, and go to state 25
    '('  shift, and go to state 35

    $default  reduce using rule 20 (varDeclId)


State 22

    7 varDeclaration: typeSpecifier varDeclList . ';'
   13 varDeclList: varDeclList . ',' varDeclInitialize
   14            | varDeclList . ',' error

    ';'  shift, and go to state 36
    ','  shift, and go to state 27


State 23

   23 varDeclId: error ']' .

    $default  reduce using rule 23 (varDeclId)


State 24

   18 varDeclInitialize: error ':' . simpleExpression

    ID           shift, and go to state 37
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    NOT          shift, and go to state 40
    CHARCONST    shift, and go to state 41
    STRINGCONST  shift, and go to state 42
    '('          shift, and go to state 43
    '-'          shift, and go to state 44
    '*'          shift, and go to state 45
    '?'          shift, and go to state 46

    simpleExpression    go to state 47
    andExpression       go to state 48
    unaryRelExpression  go to state 49
    relExpression       go to state 50
    sumExpression       go to state 51
    mulExpression       go to state 52
    unaryExpression     go to state 53
    unaryop             go to state 54
    factor              go to state 55
    mutable             go to state 56
    immutable           go to state 57
    call                go to state 58
    constant            go to state 59


State 25

   21 varDeclId: ID '[' . NUMCONST ']'
   22          | ID '[' . error

    error     shift, and go to state 60
    NUMCONST  shift, and go to state 61


State 26

    8 varDeclaration: error varDeclList ';' .

    $default  reduce using rule 8 (varDeclaration)


State 27

   13 varDeclList: varDeclList ',' . varDeclInitialize
   14            | varDeclList ',' . error

    error  shift, and go to state 62
    ID     shift, and go to state 13

    varDeclInitialize  go to state 63
    varDeclId          go to state 16


State 28

   17 varDeclInitialize: varDeclId ':' . simpleExpression
   19                  | varDeclId ':' . error

    error        shift, and go to state 64
    ID           shift, and go to state 37
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    NOT          shift, and go to state 40
    CHARCONST    shift, and go to state 41
    STRINGCONST  shift, and go to state 42
    '('          shift, and go to state 43
    '-'          shift, and go to state 44
    '*'          shift, and go to state 45
    '?'          shift, and go to state 46

    simpleExpression    go to state 65
    andExpression       go to state 48
    unaryRelExpression  go to state 49
    relExpression       go to state 50
    sumExpression       go to state 51
    mulExpression       go to state 52
    unaryExpression     go to state 53
    unaryop             go to state 54
    factor              go to state 55
    mutable             go to state 56
    immutable           go to state 57
    call                go to state 58
    constant            go to state 59


State 29

   33 funDeclaration: ID '(' error .
   40 paramList: error .

    ';'       reduce using rule 40 (paramList)
    ')'       reduce using rule 40 (paramList)
    $default  reduce using rule 33 (funDeclaration)


State 30

   41 paramTypeList: typeSpecifier . paramIdList

    error  shift, and go to state 66
    ID     shift, and go to state 67

    paramIdList  go to state 68
    paramId      go to state 69


State 31

   29 funDeclaration: ID '(' params . ')' statement
   34               | ID '(' params . ')' error

    ')'  shift, and go to state 70


State 32

   35 params: paramList .
   37 paramList: paramList . ';' paramTypeList
   38          | paramList . ';' error

    ';'  shift, and go to state 71

    $default  reduce using rule 35 (params)


State 33

   39 paramList: paramTypeList .

    $default  reduce using rule 39 (paramList)


State 34

    9 varDeclaration: typeSpecifier error ';' .

    $default  reduce using rule 9 (varDeclaration)


State 35

   28 funDeclaration: typeSpecifier ID '(' . params ')' statement
   31               | typeSpecifier ID '(' . error
   32               | typeSpecifier ID '(' . params ')' error

    error  shift, and go to state 72
    INT    shift, and go to state 2
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    ')'  reduce using rule 36 (params)

    typeSpecifier  go to state 30
    params         go to state 73
    paramList      go to state 32
    paramTypeList  go to state 33


State 36

    7 varDeclaration: typeSpecifier varDeclList ';' .

    $default  reduce using rule 7 (varDeclaration)


State 37

  156 mutable: ID .
  162 call: ID . '(' args ')'

    '('  shift, and go to state 74

    $default  reduce using rule 156 (mutable)


State 38

  168 constant: BOOLCONST .

    $default  reduce using rule 168 (constant)


State 39

  167 constant: NUMCONST .

    $default  reduce using rule 167 (constant)


State 40

  125 unaryRelExpression: NOT . unaryRelExpression
  127                   | NOT . error

    error        shift, and go to state 75
    ID           shift, and go to state 37
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    NOT          shift, and go to state 40
    CHARCONST    shift, and go to state 41
    STRINGCONST  shift, and go to state 42
    '('          shift, and go to state 43
    '-'          shift, and go to state 44
    '*'          shift, and go to state 45
    '?'          shift, and go to state 46

    unaryRelExpression  go to state 76
    relExpression       go to state 50
    sumExpression       go to state 51
    mulExpression       go to state 52
    unaryExpression     go to state 53
    unaryop             go to state 54
    factor              go to state 55
    mutable             go to state 56
    immutable           go to state 57
    call                go to state 58
    constant            go to state 59


State 41

  169 constant: CHARCONST .

    $default  reduce using rule 169 (constant)


State 42

  170 constant: STRINGCONST .

    $default  reduce using rule 170 (constant)


State 43

  158 immutable: '(' . expression ')'
  161          | '(' . error

    error        shift, and go to state 77
    ID           shift, and go to state 37
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    NOT          shift, and go to state 40
    CHARCONST    shift, and go to state 41
    STRINGCONST  shift, and go to state 42
    '('          shift, and go to state 43
    '-'          shift, and go to state 44
    '*'          shift, and go to state 45
    '?'          shift, and go to state 46

    expression          go to state 78
    simpleExpression    go to state 79
    andExpression       go to state 48
    unaryRelExpression  go to state 49
    relExpression       go to state 50
    sumExpression       go to state 51
    mulExpression       go to state 52
    unaryExpression     go to state 53
    unaryop             go to state 54
    factor              go to state 55
    mutable             go to state 80
    immutable           go to state 57
    call                go to state 58
    constant            go to state 59


State 44

  151 unaryop: '-' .

    $default  reduce using rule 151 (unaryop)


State 45

  152 unaryop: '*' .

    $default  reduce using rule 152 (unaryop)


State 46

  153 unaryop: '?' .

    $default  reduce using rule 153 (unaryop)


State 47

   18 varDeclInitialize: error ':' simpleExpression .
  119 simpleExpression: simpleExpression . OR andExpression
  121                 | simpleExpression . OR error

    OR  shift, and go to state 81

    $default  reduce using rule 18 (varDeclInitialize)


State 48

  120 simpleExpression: andExpression .
  122 andExpression: andExpression . AND unaryRelExpression
  124              | andExpression . AND error

    AND  shift, and go to state 82

    $default  reduce using rule 120 (simpleExpression)


State 49

  123 andExpression: unaryRelExpression .

    $default  reduce using rule 123 (andExpression)


State 50

  126 unaryRelExpression: relExpression .

    $default  reduce using rule 126 (unaryRelExpression)


State 51

  128 relExpression: sumExpression . relop sumExpression
  129              | sumExpression .
  130              | sumExpression . relop error
  137 sumExpression: sumExpression . sumop mulExpression
  139              | sumExpression . sumop error

    EQ      shift, and go to state 83
    LESSEQ  shift, and go to state 84
    GRTEQ   shift, and go to state 85
    NOTEQ   shift, and go to state 86
    '<'     shift, and go to state 87
    '>'     shift, and go to state 88
    '+'     shift, and go to state 89
    '-'     shift, and go to state 90

    $default  reduce using rule 129 (relExpression)

    relop  go to state 91
    sumop  go to state 92


State 52

  138 sumExpression: mulExpression .
  142 mulExpression: mulExpression . mulop unaryExpression
  144              | mulExpression . mulop error

    '*'  shift, and go to state 93
    '/'  shift, and go to state 94
    '%'  shift, and go to state 95

    $default  reduce using rule 138 (sumExpression)

    mulop  go to state 96


State 53

  143 mulExpression: unaryExpression .

    $default  reduce using rule 143 (mulExpression)


State 54

  148 unaryExpression: unaryop . unaryExpression
  150                | unaryop . error

    error        shift, and go to state 97
    ID           shift, and go to state 37
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 41
    STRINGCONST  shift, and go to state 42
    '('          shift, and go to state 43
    '-'          shift, and go to state 44
    '*'          shift, and go to state 45
    '?'          shift, and go to state 46

    unaryExpression  go to state 98
    unaryop          go to state 54
    factor           go to state 55
    mutable          go to state 56
    immutable        go to state 57
    call             go to state 58
    constant         go to state 59


State 55

  149 unaryExpression: factor .

    $default  reduce using rule 149 (unaryExpression)


State 56

  154 factor: mutable .
  157 mutable: mutable . '[' expression ']'

    '['  shift, and go to state 99

    $default  reduce using rule 154 (factor)


State 57

  155 factor: immutable .

    $default  reduce using rule 155 (factor)


State 58

  159 immutable: call .

    $default  reduce using rule 159 (immutable)


State 59

  160 immutable: constant .

    $default  reduce using rule 160 (immutable)


State 60

   22 varDeclId: ID '[' error .

    $default  reduce using rule 22 (varDeclId)


State 61

   21 varDeclId: ID '[' NUMCONST . ']'

    ']'  shift, and go to state 100


State 62

   14 varDeclList: varDeclList ',' error .
   18 varDeclInitialize: error . ':' simpleExpression
   23 varDeclId: error . ']'

    ']'  shift, and go to state 23
    ':'  shift, and go to state 24

    $default  reduce using rule 14 (varDeclList)


State 63

   13 varDeclList: varDeclList ',' varDeclInitialize .

    $default  reduce using rule 13 (varDeclList)


State 64

   19 varDeclInitialize: varDeclId ':' error .

    $default  reduce using rule 19 (varDeclInitialize)


State 65

   17 varDeclInitialize: varDeclId ':' simpleExpression .
  119 simpleExpression: simpleExpression . OR andExpression
  121                 | simpleExpression . OR error

    OR  shift, and go to state 81

    $default  reduce using rule 17 (varDeclInitialize)


State 66

   45 paramIdList: error .

    $default  reduce using rule 45 (paramIdList)


State 67

   46 paramId: ID .
   47        | ID . '[' ']'

    '['  shift, and go to state 101

    $default  reduce using rule 46 (paramId)


State 68

   41 paramTypeList: typeSpecifier paramIdList .
   42 paramIdList: paramIdList . ',' paramId
   43            | paramIdList . ',' error

    ','  shift, and go to state 102

    $default  reduce using rule 41 (paramTypeList)


State 69

   44 paramIdList: paramId .

    $default  reduce using rule 44 (paramIdList)


State 70

   29 funDeclaration: ID '(' params ')' . statement
   34               | ID '(' params ')' . error

    error        shift, and go to state 103
    ID           shift, and go to state 37
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    NOT          shift, and go to state 40
    IF           shift, and go to state 104
    WHILE        shift, and go to state 105
    BREAK        shift, and go to state 106
    LOOP         shift, and go to state 107
    RETURN       shift, and go to state 108
    CHARCONST    shift, and go to state 41
    STRINGCONST  shift, and go to state 42
    ';'          shift, and go to state 109
    '('          shift, and go to state 43
    '{'          shift, and go to state 110
    '-'          shift, and go to state 44
    '*'          shift, and go to state 45
    '?'          shift, and go to state 46

    statement           go to state 111
    matched             go to state 112
    unmatched           go to state 113
    compoundStmt        go to state 114
    matchedSelStmt      go to state 115
    unmatchedSelStmt    go to state 116
    matchedWhileStmt    go to state 117
    unmatchedWhileStmt  go to state 118
    matchedLoopStmt     go to state 119
    unmatchedLoopStmt   go to state 120
    returnStmt          go to state 121
    breakStmt           go to state 122
    expressionStmt      go to state 123
    expression          go to state 124
    simpleExpression    go to state 79
    andExpression       go to state 48
    unaryRelExpression  go to state 49
    relExpression       go to state 50
    sumExpression       go to state 51
    mulExpression       go to state 52
    unaryExpression     go to state 53
    unaryop             go to state 54
    factor              go to state 55
    mutable             go to state 80
    immutable           go to state 57
    call                go to state 58
    constant            go to state 59


State 71

   37 paramList: paramList ';' . paramTypeList
   38          | paramList ';' . error

    error  shift, and go to state 125
    INT    shift, and go to state 2
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    typeSpecifier  go to state 30
    paramTypeList  go to state 126


State 72

   31 funDeclaration: typeSpecifier ID '(' error .
   40 paramList: error .

    ';'       reduce using rule 40 (paramList)
    ')'       reduce using rule 40 (paramList)
    $default  reduce using rule 31 (funDeclaration)


State 73

   28 funDeclaration: typeSpecifier ID '(' params . ')' statement
   32               | typeSpecifier ID '(' params . ')' error

    ')'  shift, and go to state 127


State 74

  162 call: ID '(' . args ')'

    error        shift, and go to state 128
    ID           shift, and go to state 37
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    NOT          shift, and go to state 40
    CHARCONST    shift, and go to state 41
    STRINGCONST  shift, and go to state 42
    '('          shift, and go to state 43
    '-'          shift, and go to state 44
    '*'          shift, and go to state 45
    '?'          shift, and go to state 46

    ')'  reduce using rule 164 (args)

    expression          go to state 129
    simpleExpression    go to state 79
    andExpression       go to state 48
    unaryRelExpression  go to state 49
    relExpression       go to state 50
    sumExpression       go to state 51
    mulExpression       go to state 52
    unaryExpression     go to state 53
    unaryop             go to state 54
    factor              go to state 55
    mutable             go to state 80
    immutable           go to state 57
    call                go to state 58
    args                go to state 130
    argList             go to state 131
    constant            go to state 59


State 75

  127 unaryRelExpression: NOT error .

    $default  reduce using rule 127 (unaryRelExpression)


State 76

  125 unaryRelExpression: NOT unaryRelExpression .

    $default  reduce using rule 125 (unaryRelExpression)


State 77

  108 expression: error . '=' error
  110           | error . INC
  112           | error . DEC
  118           | error .
  161 immutable: '(' error .

    DEC  shift, and go to state 132
    INC  shift, and go to state 133
    '='  shift, and go to state 134

    ')'       reduce using rule 118 (expression)
    ')'       [reduce using rule 161 (immutable)]
    $default  reduce using rule 161 (immutable)


State 78

  158 immutable: '(' expression . ')'

    ')'  shift, and go to state 135


State 79

  117 expression: simpleExpression .
  119 simpleExpression: simpleExpression . OR andExpression
  121                 | simpleExpression . OR error

    OR  shift, and go to state 81

    $default  reduce using rule 117 (expression)


State 80

  107 expression: mutable . '=' expression
  109           | mutable . INC
  111           | mutable . DEC
  113           | mutable . ADDASS expression
  114           | mutable . SUBASS expression
  115           | mutable . MULASS expression
  116           | mutable . DIVASS expression
  154 factor: mutable .
  157 mutable: mutable . '[' expression ']'

    ADDASS  shift, and go to state 136
    SUBASS  shift, and go to state 137
    DIVASS  shift, and go to state 138
    MULASS  shift, and go to state 139
    DEC     shift, and go to state 140
    INC     shift, and go to state 141
    '['     shift, and go to state 99
    '='     shift, and go to state 142

    $default  reduce using rule 154 (factor)


State 81

  119 simpleExpression: simpleExpression OR . andExpression
  121                 | simpleExpression OR . error

    error        shift, and go to state 143
    ID           shift, and go to state 37
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    NOT          shift, and go to state 40
    CHARCONST    shift, and go to state 41
    STRINGCONST  shift, and go to state 42
    '('          shift, and go to state 43
    '-'          shift, and go to state 44
    '*'          shift, and go to state 45
    '?'          shift, and go to state 46

    andExpression       go to state 144
    unaryRelExpression  go to state 49
    relExpression       go to state 50
    sumExpression       go to state 51
    mulExpression       go to state 52
    unaryExpression     go to state 53
    unaryop             go to state 54
    factor              go to state 55
    mutable             go to state 56
    immutable           go to state 57
    call                go to state 58
    constant            go to state 59


State 82

  122 andExpression: andExpression AND . unaryRelExpression
  124              | andExpression AND . error

    error        shift, and go to state 145
    ID           shift, and go to state 37
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    NOT          shift, and go to state 40
    CHARCONST    shift, and go to state 41
    STRINGCONST  shift, and go to state 42
    '('          shift, and go to state 43
    '-'          shift, and go to state 44
    '*'          shift, and go to state 45
    '?'          shift, and go to state 46

    unaryRelExpression  go to state 146
    relExpression       go to state 50
    sumExpression       go to state 51
    mulExpression       go to state 52
    unaryExpression     go to state 53
    unaryop             go to state 54
    factor              go to state 55
    mutable             go to state 56
    immutable           go to state 57
    call                go to state 58
    constant            go to state 59


State 83

  135 relop: EQ .

    $default  reduce using rule 135 (relop)


State 84

  131 relop: LESSEQ .

    $default  reduce using rule 131 (relop)


State 85
